--- a/coursehelper-front-end/content/web/viewer.css
+++ b/coursehelper-front-end/content/web/viewer.css
@@ -1934,25 +1934,36 @@ html[dir='rtl'] #documentPropertiesContainer .row > * {
 }
 
 /*added*/
+body{
+    padding-right:15px;
+}
 
 #left{
-  margin-top: 10px;
-  height: 97%;
-  width:61%;
+  min-width: 400px;
+  margin-top: 6px;
+  height: 98%;
+  width:100%;
   float: left;
+}
+#wrapRight{
+    position:fixed;
+    z-index: 1002;
+    right:3px;
+    width:0px;
+    height:98%;
 }
 #right{
   background-color: #404040;
-  float: left;
-  height: 97%;
-  width: 37%;
-  margin-top: 10px;
+  width: 100%;
+  height: 100%;
+  margin-top: 6px;
 }
 #middle {
-  width: 1%;
+  position: absolute;
+  left:-15px;
+  width: 15px;
   color: #CCCCCC;
-  float: left;
-  padding: 250px 5px;
+  padding: 250px 0px;
   cursor: pointer;
   font-weight: 700;
   word-wrap: break-word;
